// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a complete address 1`] = `
CompleteAddress {
  "address": AztecAddress {
    "buffer": {
      "data": [
        17,
        160,
        201,
        96,
        127,
        185,
        91,
        146,
        4,
        147,
        169,
        211,
        33,
        226,
        156,
        174,
        240,
        174,
        157,
        149,
        81,
        249,
        149,
        226,
        160,
        18,
        239,
        108,
        218,
        140,
        217,
        137,
      ],
      "type": "Buffer",
    },
  },
  "partialAddress": Fr {
    "value": 14273840083696241216436261500085649155281267590119694711623393161813305965081n,
  },
  "publicKey": Point {
    "kind": "point",
    "x": Fr {
      "value": 1n,
    },
    "y": Fr {
      "value": 2n,
    },
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 11464606379677897655841837765481150958925254400943302278940297281867381781406n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 13496027098354931963552650893736311555066207973436318315473061104559483240114n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 4215437441630701912471521208281831379118238768967605324016661064011479515427n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 6913428931557499069967495171242326455519902431197956487857751337970681394459n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 16534789767920606571541683139317465939081284769910575930923078591683356873433n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 18523829990807403875392701649621519624514099923446053518613884494755019137311n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 4300635537850003871451650912699252898033249035618622792407744400807361159458n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    18,
    27,
    182,
    124,
    37,
    144,
    241,
    62,
    203,
    104,
    141,
    178,
    22,
    93,
    79,
    221,
    21,
    63,
    245,
    104,
    71,
    249,
    55,
    250,
    39,
    168,
    54,
    232,
    57,
    46,
    130,
    254,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    16,
    203,
    183,
    91,
    212,
    69,
    118,
    215,
    16,
    156,
    209,
    239,
    77,
    6,
    1,
    196,
    110,
    152,
    176,
    110,
    97,
    68,
    38,
    190,
    149,
    170,
    169,
    131,
    68,
    140,
    237,
    237,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 16807036221916272668165173999731456176118187870505447532689806512445943708574n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 18906676604864959005173276375312600640969342814693694325262988108261136820631n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 16458590480032755384470108712609389694120470087885514794475677859856835664159n,
}
`;
